--- a/css/style.css
+++ b/css/style.css
@@ -2,27 +2,22 @@
   width: 100%;
   height: 3828px;
 }
-
 .header {
     font-family: 'Lato', sans-serif;
     height: 75px;
     width: 100%;
     background-color: #222;
 }
-
-
 .container1{
     font-family: 'Lato', sans-serif;
     width: 100%;
     height: 100%;
     display: flex;
-    justify-self: start;align-content: center;
+    justify-self: start;
+    align-content: center;
     align-items: center;
     padding-top: 10px;
 }
-    
-  
-
 .container2{
     font-family: 'Lato', sans-serif;
     width: 100%;
@@ -68,10 +63,6 @@
     padding: 0px 2px 23px;
     align-items: baseline;
 }
-
-
-
-
 .header2 {   
     font-family: 'Lato', sans-serif;
     width: 33%;
@@ -128,24 +119,25 @@
     display: block;
     position: relative;
 }
-
 .content1{
     font-family: 'Lato', sans-serif;
     width: 100%;
     height: 764px;
     background-color: #F1E4E6;
     display: flex;
+}   
+.content22{
+    font-family: 'Lato', sans-serif;
+     
+    font-weight: bold; 
 }
-
-    
-
-
 .content2{
     font-family: 'Lato', sans-serif;
     width: 100%;
     top: 25px;
     text-align: left;
     padding-top: 290px; 
+    font-weight: bold;
     
     letter-spacing: 2px;
     line-height: 3px;
@@ -156,6 +148,7 @@
     font-family: 'Lato', sans-serif;
     color: #F16D7F;
     line-height: 0px;
+    font-weight: bold;
 
 }
 .content3{
@@ -223,6 +216,7 @@
     
     text-align: center;
     margin: 0px auto 0px ;
+    margin-top: 80px;
     
     
 }
@@ -382,10 +376,12 @@ display: flex;
 
 }
 .container{
+    font-family: 'Lato', sans-serif;
     width: 100%;
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
+    margin-top: 96px;
     flex-direction: column;
     flex-wrap: nowrap;
     align-content: center;
@@ -423,8 +419,10 @@ display: flex;
 }
 
 .a1{
+    font-family: 'Lato';
     width: 30%;
     background: #F8F8F8;
+    margin-top: 30px;
 
     
 }
@@ -436,15 +434,23 @@ display: flex;
     width: 100%;
 }
 .a4{
+    font-family: 'Lato', sans-serif;
     width: 100%;
+    margin-left: 15px;
 }
 .a5{
+    font-family: 'Lato', sans-serif;
     width: 100%;
     color:#F16D7F;
+    margin-left: 15px;
+    margin-bottom: 20px;
 }
 .a6{
+    font-family: 'Lato';
     width: 30%;
     background: #F8F8F8;
+    margin-top: 30px;
+    
 
     
 }
@@ -452,6 +458,9 @@ display: flex;
     width: 100%;
     background-color: #F7E4E2;
     height: 390px;
+    text-align: center;
+    
+    
 }
 .a8{
    width: 100%;
@@ -465,15 +474,21 @@ display: flex;
 }
 .a10{
     width: 100%;
+    
 }
 .a11{
+    font-family: 'Lato', sans-serif;
     width: 100%;
     color:#F16D7F;
+    margin-left: 15px;
+    margin-bottom: 20px;
+    
 }
 .a12{
+    font-family: 'Lato';
     width: 30%;
     background-color: #F8F8F8;
-    ;
+    margin-top: 30px;
    
 }
 .a13{
@@ -485,23 +500,70 @@ display: flex;
 }
 .a15{
     width: 100%;
-    text-align: left;
+    
+   
 }
 .a16{
+    font-family: 'Lato', sans-serif;
     width: 100%;
     color:#F16D7F;
+    margin-left: 15px;   
+    margin-bottom: 20px;
     
 }
 .a17{
     width: 100%;
     height: 390px;
 }
-.h4{
-    Font family: Lato;
-    Font style: Regular;
+.a18{
+    margin-left: 15px;
+    text-align: left;
+}
+.a19{
+    width: 20%;
+    height: 390px;
+    
+    position: absolute;
+    padding: 0px 0px;
+    margin-right: 0px;
+    margin-left: -99px;
+    
+
+}
+.a6:hover .a7{
+   filter: brightness(30%);
+}
+.a20{
+    display: none ;
+    justify-content: center;
+    top: 98px;
+    width: 100%;
+    pointer-events: none;
+    border: 1px solid #10fb04;
+    position: relative;
+    align-items: stretch;
+    
+    
+}
+.a21{
+    margin-right: 10px;    
+}
+.a22{
+    font-family: 'Lato', sans-serif;   
     Font size: 13px;
-    Line height: 16px;
-    Line height: 100%;
-    position: Left;
-    text-align:left;
+    Line height: 1,2;
+    Line height: 700;
+    color: #10fb04;
+}
+.a23{
+   display: flex;
+   text-decoration: none;
+   
+   padding: 8px;
+   justify-content: center;
+   align-items: center;
+   pointer-events: auto; 
+}
+.a6:hover .a20{
+    display: flex;
 }
