--- a/css/style.css
+++ b/css/style.css
@@ -568,7 +568,76 @@ display: flex;
 }
 .a6:hover .a20{
     display: flex;
-   
-
+}
+.a24{
+    font-family: 'Lato', sans-serif;  
+    display: flex;
+    border: 1px solid #FF6A6A;
+    width: 211px;
+    height: 47PX;
+    text-align: center;
     
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin: -835px auto;
+}
+.a25{
+    color:#F26376;
+    
+}
+.f{
+    background: #222224;
+    width: 100%;
+    height: 340px;
+    display: flex;
+    margin-top: 910px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+.f1{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+
+}
+.f2{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+.f3{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+.f5{
+    font-family: 'Lato', sans-serif;
+    color: #FBFBFB;
+}
+.f6{
+    font-family: 'Lato', sans-serif;
+    color: #FBFBFB;
+}
+.s{
+    width: 100%;
+    height: 450px;
+    background-image: url(/img/photo\ subscribe.png);
+    background-size: cover;
 }
