--- a/css/style.css
+++ b/css/style.css
@@ -636,6 +636,7 @@ display: flex;
     color: #FBFBFB;
 }
 .s{
+    display: flex;
     width: 100%;
     height: 450px;
     background-image: url(/img/photo\ subscribe.png);
