--- a/css/style.css
+++ b/css/style.css
@@ -639,6 +639,149 @@ display: flex;
     display: flex;
     width: 100%;
     height: 450px;
-    background-image: url(/img/photo\ subscribe.png);
+    background-image: url(../img/photo\ subscribe.png);
     background-size: cover;
+    background-repeat: no-repeat;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+
+}
+.s9{
+    font-family: 'Lato';
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: nowrap;
+}
+.s2{
+
+}
+.s3{
+    width: 45%;
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    color: #222224;
+   
+left: 14.39%;
+right: 63.14%;
+top: 49.78%;
+bottom: 28.12%;
+
+
+}
+.s4{
+    font-family: 'Lato', sans-serif;
+width: 50%;
+}
+.s5{
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
+}
+.s6{
+
+}
+.s7{
+    font-family: 'Lato', sans-serif;
+    background-color: #E1E1E1;
+    border-radius: 30px;
+    Height: 49px;
+    Width: 235px;
+    border: 0px;
+    padding: 0px 21px 0px;
+}
+.s8{
+    font-family: 'Lato', sans-serif;
+    background: #E05C6E;
+    color: #fff;
+    Height:49px;
+    Width:100px;
+    border: 0px;
+    margin-left: -70px;
+    border-radius:  0px 30px 30px 0px;
+
+}
+.s10{
+    font-style: italic;
+}
+.footer{
+    display: flex;
+    width: 100%;
+    height: 80px;
+    background-color: #222224;
+}
+.f1{
+    width: 103%;
+    font-family: 'Lato', sans-serif;
+    color: #FBFBFB;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-evenly;
+    
+    margin-left: -590px;
+}
+.f2{
+    width: 12%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.f3{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    height: 32px;
+    width: 32px;
+    background-color: #ffffff;
+    
+}
+.f4{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    height: 32px;
+    width: 32px;
+    background-color: #ffffff;
+}
+.f5{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    height: 32px;
+    width: 32px;
+    background-color: #ffffff;
+}
+.f6{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    height: 32px;
+    width: 32px;
+    background-color: #ffffff;
 }
