--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .index{
   width: 100%;
-  height: 3828px;
+  
 }
 .header {
     font-family: 'Lato', sans-serif;
@@ -719,7 +719,7 @@ width: 50%;
     height: 80px;
     background-color: #222224;
 }
-.f1{
+.f10{
     width: 103%;
     font-family: 'Lato', sans-serif;
     color: #FBFBFB;
@@ -728,10 +728,10 @@ width: 50%;
     flex-wrap: nowrap;
     align-content: center;
     justify-content: space-evenly;
-    
+    align-items: center;
     margin-left: -590px;
 }
-.f2{
+.f20{
     width: 12%;
     display: flex;
     flex-direction: row;
@@ -740,7 +740,7 @@ width: 50%;
     justify-content: space-evenly;
     align-items: center;
 }
-.f3{
+.f30{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -752,7 +752,7 @@ width: 50%;
     background-color: #ffffff;
     
 }
-.f4{
+.f40{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -763,7 +763,7 @@ width: 50%;
     width: 32px;
     background-color: #ffffff;
 }
-.f5{
+.f50{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -774,7 +774,7 @@ width: 50%;
     width: 32px;
     background-color: #ffffff;
 }
-.f6{
+.f60{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -784,4 +784,92 @@ width: 50%;
     height: 32px;
     width: 32px;
     background-color: #ffffff;
+}
+.fr{
+    background: #222224;
+    width: 100%;
+    height: 340px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+.header-r{
+    width: 100%;
+    height: 150px;
+    background: #F8F3F4;
+
+}
+.r1{
+    position: absolute;
+left: 14.38%;
+right: 73.5%;
+top: 25%;
+bottom: 88.56%;
+
+font-family: 'Lato';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+margin-bottom: 30px;
+margin-top: 0px;
+/* identical to box height */
+
+
+color: #F16D7F;
+
+}
+.r2{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+
+}
+.r3{
+    display: flex;
+}
+.r5{
+
+}
+.r6{
+
+}
+.r7{
+
+}
+.r8{
+
+}
+.r9{
+
+}
+.r10{
+
+}
+.r11{
+
+}
+.r12{
+
+}
+.r13{
+
+}
+.r14{
+
+}
+.r15{
+
+}
+.r16{
+
+}
+.r17{
+
+}
+.r18{
+    
 }
